# rust-mssql-driver

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  LIMITATIONS.md  README.md  RELEASING.md  SECURITY.md  STABILITY.md  UNSUPPORTED.md  deny.toml  rust-toolchain.toml
.config/: hakari.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security-audit.yml
crates/mssql-auth/: Cargo.toml  README.md
crates/mssql-auth/src/: aead.rs  azure_identity_auth.rs  azure_keyvault.rs  cert_auth.rs  lib.rs  provider.rs  sql_auth.rs  sspi_auth.rs  windows_certstore.rs
crates/mssql-client/: Cargo.toml
crates/mssql-client/benches/: client.rs
crates/mssql-client/examples/: basic.rs  bulk_insert.rs  derive_macros.rs  streaming.rs  transactions.rs
crates/mssql-client/src/: blob.rs  bulk.rs  change_tracking.rs  client.rs  config.rs  encryption.rs  error.rs  instrumentation.rs  lib.rs  query.rs  row.rs  state.rs  stream.rs  transaction.rs  tvp.rs
crates/mssql-client/tests/: always_encrypted.rs  config.rs  integration.rs
crates/mssql-codec/: Cargo.toml  README.md
crates/mssql-codec/src/: connection.rs  error.rs  framed.rs  lib.rs  packet_codec.rs
crates/mssql-derive/: Cargo.toml  README.md
crates/mssql-derive/src/: lib.rs
crates/mssql-pool/: README.md
crates/mssql-pool/src/: config.rs  lib.rs  lifecycle.rs  pool.rs
crates/mssql-pool/tests/: integration.rs
crates/mssql-testing/: Cargo.toml  README.md
crates/mssql-testing/src/: lib.rs  mock_server.rs
crates/mssql-tls/: README.md
crates/mssql-types/benches/: types.rs
crates/mssql-types/src/: encode.rs  lib.rs  tvp.rs  value.rs
crates/tds-protocol/: Cargo.toml  README.md
crates/tds-protocol/src/: codec.rs  crypto.rs  error.rs  lib.rs  login7.rs  packet.rs  prelogin.rs  rpc.rs  sql_batch.rs  token.rs  tvp.rs  types.rs  version.rs
docs/: BENCHMARKS.md  COMPARATIVE_BENCHMARKS.md  CONNECTION_STRINGS.md  DEPLOYMENT.md  ERRORS.md  FEATURES.md  LOB.md  MEMORY.md  MIGRATION_FROM_TIBERIUS.md  OPENTELEMETRY.md  OPERATIONS.md  POOL_METRICS.md  RETRY_STRATEGY.md  TIMEOUTS.md  TLS.md  TROUBLESHOOTING.md  TYPE_STATE.md
docs/examples/: production-configs.md
xtask/: Cargo.toml
xtask/src/: main.rs
