[package]
name = "mssql-auth"
description = "Authentication strategies for SQL Server connections"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "authentication", "azure", "security"]
categories = ["authentication", "database"]

[features]
default = []
# Azure Managed Identity and Service Principal authentication
azure-identity = ["dep:azure_identity", "dep:azure_core", "dep:time"]
# Integrated authentication (Kerberos/SPNEGO) - Linux only
# Requires libkrb5-dev on Debian/Ubuntu or krb5-devel on RHEL/Fedora
integrated-auth = ["dep:libgssapi"]
cert-auth = []
# Enable secure credential zeroization on drop
zeroize = ["dep:zeroize"]

[dependencies]
tds-protocol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

# Optional: Azure authentication (Managed Identity, Service Principal)
azure_identity = { workspace = true, optional = true }
azure_core = { workspace = true, optional = true }
time = { version = "0.3", optional = true }

# Optional: Integrated authentication (Kerberos/SPNEGO)
libgssapi = { version = "0.9", optional = true }

# Optional: Secure credential zeroization
zeroize = { version = "1.8", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
