[package]
name = "mssql-client"
description = "High-level async SQL Server client with type-state connection management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sql-server", "mssql", "database", "async", "tokio"]
categories = ["database", "asynchronous"]

[features]
default = ["chrono", "uuid", "decimal"]
chrono = ["mssql-types/chrono", "dep:chrono"]
uuid = ["mssql-types/uuid"]
decimal = ["mssql-types/decimal"]
json = ["mssql-types/json"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies]
tds-protocol = { workspace = true }
mssql-tls = { workspace = true }
mssql-codec = { workspace = true }
mssql-types = { workspace = true }
mssql-auth = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
lru = { workspace = true }

# Optional: chrono for date/time types
chrono = { workspace = true, optional = true }

# Optional: OpenTelemetry integration
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mssql-derive = { workspace = true }
tracing-subscriber = "0.3"
rust_decimal = { workspace = true }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "bulk_insert"
path = "examples/bulk_insert.rs"

[[example]]
name = "derive_macros"
path = "examples/derive_macros.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[lints]
workspace = true
